# nanoflare

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  audiomodel.py  benchmark.cpp  benchmark_summary.py  builder.pl  conv1d.json  convwaveshaper.py  generate_test_data.py  generate_tests.py  generate_tests_data.py  layers_accuracy.cpp  lib_test.cpp  lstm.json  lstm_test.cpp  models_accuracy.cpp  pyproject.toml  recnet.json  regression_tests.cpp  scc.py  tcn.py
data/: causaldilatedconv1d.json  causaldilatedconv1d.torchscript  convclipper.torchscript  convwaveshaper.json  gru.torchscript  lstm.torchscript  microtcn.json  microtcn.torchscript  resgru.json  residualblock.json  reslstm.torchscript  tcnblock.json  wavenet.json  wavenet.torchscript
include/: BaseModel.h  BatchNorm1d.h  CausalDilatedConv1d.h  Conv1d.h  ConvClipper.h  GRU.h  GRUCell.h  LSTM.h  LSTMCell.h  Linear.h  MicroTCNBlock.h  ModelBuilder.h  PReLU.h  PlainSequential.h  RecNet.h  ResidualBlock.h  TCNBlock.h  utils.h
include/models/: BaseModel.h  ConvWaveshaper.h  MicroTCN.h  ResRNN.h  SCC.h  TCN.h  WaveNet.h
include/nanoflare/: BuiltinModels.h  Functional.h  ModelBuilder.h  utils.h
include/nanoflare/layers/: BatchNorm1d.h  Biquad.h  CausalDilatedConv1d.h  Conv1d.h  ConvClipper.h  FiLM.h  GRU.h  GRUCell.h  LSTM.h  LSTMCell.h  Linear.h  MicroTCNBlock.h  PReLU.h  PlainSequential.h  ResidualBlock.h  TCNBlock.h
include/nanoflare/models/: BaseModel.h  ConvWaveshaper.h  HammersteinWeiner.h  HammersteinWiener.h  HammersteinWienerLight.h  MicroTCN.h  ResRNN.h  TCN.h  WaveNet.h
microtorch/: CMakeLists.txt
microtorch/include/: CausalDilatedConv1d.h  Conv1d.h  GRUCell.h  LSTMCell.h  MicroTCNBlock.h  PlainSequential.h  utils.h
microtorch/json/: README.md
microtorch/json/.github/workflows/: scorecards.yml
nanoflare/: CMakeLists.txt
nanoflare/include/: BatchNorm1d.h  CausalDilatedConv1d.h  Conv1d.h  ConvClipper.h  GRU.h  GRUCell.h  LSTM.h  LSTMCell.h  Linear.h  MicroTCNBlock.h  ModelBuilder.h  PReLU.h  PlainSequential.h  ResidualBlock.h  TCNBlock.h  utils.h
nanoflare/include/models/: BaseModel.h  ConvWaveshaper.h  MicroTCN.h  ResRNN.h  TCN.h  WaveNet.h
nanoflare/include/nanoflare/: ModelBuilder.h  utils.h
nanoflare/include/nanoflare/layers/: BatchNorm1d.h  CausalDilatedConv1d.h  Conv1d.h  ConvClipper.h  GRU.h  GRUCell.h  LSTM.h  LSTMCell.h  Linear.h  MicroTCNBlock.h  PReLU.h  PlainSequential.h  ResidualBlock.h  TCNBlock.h
nanoflare/include/nanoflare/models/: BaseModel.h  ConvWaveshaper.h  MicroTCN.h  ResRNN.h  TCN.h  WaveNet.h
nanoflare/json/docs/mkdocs/: requirements.txt
nanoflare/json/tests/src/: unit-msgpack.cpp  unit-regression2.cpp
nanoflare_py/: CMakeLists.txt  nanoflare_py.cpp
pynanoflare/: convwaveshaper.py  hammersteinweiner.py  hammersteinwiener.py  modules.py  rnn.py  tcn.py  wavenet.py
pytorch/: audiomodel.py  convwaveshaper.py  modules.py  rnn.py  tcn.py  wavenet.py
src/: layers_accuracy.cpp  models_accuracy.cpp  models_benchmarking.cpp
test_data/: batchnorm1d.torchscript  causaldilatedconv1d.json  causaldilatedconv1d.torchscript  conv1d.json  convclipper.json  convclipper.torchscript  convwaveshaper.json  convwaveshaper.torchscript  gru.json  linear.json  linear.torchscript  lstm.json  microtcn.json  microtcn.torchscript  microtcnblock.json  plainsequential.json  plainsequential.torchscript  recnet.json  resgru.json  resgru.torchscript  residualblock.json  residualblock.torchscript  reslstm.json  reslstm.torchscript  resrnn.json  scc.json  scc.torchscript  tcn.json  tcn.torchscript  tcnblock.json  tcnblock.torchscript  wavenet.json  wavenet.torchscript
tests/: CMakeLists.txt  filesystem.h  layers_accuracy.cpp  layers_benchmarking.cpp  models_accuracy.cpp  models_benchmarking.cpp
tests/data/: batchnorm1d.json  biquad.json  biquad.torchscript  causaldilatedconv1d.json  causaldilatedconv1d.torchscript  conv1d.torchscript  convclipper.json  convclipper.torchscript  convwaveshaper.json  convwaveshaper.torchscript  film.json  film.torchscript  hammersteinweiner.json  hammersteinweiner.torchscript  hammersteinwiener.json  hammersteinwiener.torchscript  hammersteinwienerlight.json  hammersteinwienerlight.torchscript  lstm.json  microtcn.json  microtcn.torchscript  microtcnblock.json  microtcnblock.torchscript  plainsequential.json  plainsequential.torchscript  resgru.json  resgru.torchscript  residualblock.json  residualblock.torchscript  reslstm.json  reslstm.torchscript  tcn.json  tcn.torchscript  tcnblock.json  tcnblock.torchscript  wavenet.json  wavenet.torchscript
