[build-system]
# Specifies the build backend (setuptools is standard for package structure)
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Package Metadata
name = "pynanoflare"
version = "0.1.0"
description = "Pytorch wrapper for Nanoflare C++ models"
readme = "README.md"
requires-python = ">=3.8"

# Dependencies Section (CRITICAL for torch)
dependencies = [
    "torch",
    "numpy<2",
]

[tool.setuptools]
packages = ["pynanoflare"]